@@ -74,8 +74,21 @@ CONTRACT_TYPE
 
             // (Optional) Minimum and maximum count.  Default values are 1 and
             // int.MaxValue (for min/max).
-            minCount = 1
-            maxCount = 1
+            minCrew = 1
+            maxCrew = 1
+
+            disableOnStateChange = false
+        }
+
+        PARAMETER
+        {
+            name = HasPassengers
+            type = HasPassengers
+
+            // (Optional) Minimum and maximum count.  Default values are 1 and
+            // int.MaxValue (for min/max).
+            minPassengers = 1
+            maxPassengers = 1
 
             disableOnStateChange = false
         }
