@@ -1,5 +1,6 @@
 Contract Configurator 0.5.0
 - Improved validation when loading configuration.  More checking for invalid cases and better error messaging.
+- Added HasPassengers parameter.
 - Added Funds requirement.
 - Added Science requirement.
 - Added Repuration requirement.
